Inicio da edição

--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <body>
     <main>
         <head>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Alias dolore excepturi, modi repudiandae itaque ullam, 
+                dolor tempora placeat mollitia voluptatum aspernatur officia 
+                id porro nam illum. Aliquid ab eum eaque.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Saepe ad cupiditate ipsam autem. Ex, eveniet laborum recusandae 
+                sint optio repudiandae nesciunt, velit voluptates ipsa labore 
+                delectus harum quasi et aut.</p>
         </article>
     </main>
 </body>
