--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <head>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curos em Vídeo">
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
