--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Alias dolore excepturi, modi repudiandae itaque ullam, 
-                dolor tempora placeat mollitia voluptatum aspernatur officia 
-                id porro nam illum. Aliquid ab eum eaque.</p>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> 
+                é uma linguagem de marcação para a criação de sites. 
+                Atualmente na versão 5, ela usa a semântica dos elementos 
+                para criar o conteúdo de uma página Web. Com as 
+                <abbr title="Cascading Style Sheets">CSS</abbr>, 
+                criamos as configurações visuais que um site vai ter.</p>
+                
+                <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Saepe ad cupiditate ipsam autem. Ex, eveniet laborum recusandae 
-                sint optio repudiandae nesciunt, velit voluptates ipsa labore 
-                delectus harum quasi et aut.</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada 
+                para aumentar a interatividade entre um site e seus visitantes. 
+                Os códigos em JS são executados dentro do navegador e dão acesso aos elementos 
+                HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+                
+                <p><a href="curso-js.html">Acesse o curso de Java</a></p>
         </article>
     </main>
 </body>
